<resources>
    <string name="app_name">Pind</string>
    <string name="produto">Produto:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="valor_total">Valor total R$</string>
    <string name="adicionar">Adicionar</string>
    <string name="voltar">Voltar</string>
    <string name="remover">Remover</string>
    <string name="cancelar">Cancelar</string>
    <string name="clientes">Clientes</string>
    <string name="cliente">Cliente</string>
    <string name="primeira_compra">Primeira compra</string>
    <string name="primeira_compra_">Primeira compra:</string>
    <string name="ltima_compra">Última compra:</string>
    <string name="nome_do_cliente">Nome do cliente:</string>
    <string name="cnpj">CNPJ:</string>
    <string name="e_mail">E-mail:</string>
    <string name="telefone">Telefone:</string>
    <string name="cep">CEP:</string>
    <string name="rua">Rua:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="estado">Estado:</string>
    <string name="adicionar_cliente">Adicionar cliente</string>
    <string name="pedidos">Pedidos:</string>
    <string name="finalizados">Finalizados:</string>
    <string name="pedidos_finalizados">Pedidos Finalizados</string>
    <string name="vendas">Vendas</string>
    <string name="pedidos_em_andamento">Pedidos em andamento</string>
    <string name="concluir_pedido">Concluir Pedido</string>
    <string name="adicionar_produto">Adicionar produto</string>
    <string name="data_de_fabrica_o">Data de fabricação:</string>
    <string name="data_de_validade">Data de validade:</string>
    <string name="unidade_de_medida">Unidade de medida:</string>
    <string name="nome_do_produto">Nome do produto:</string>
    <string name="valor_total_r">Valor total R$</string>
</resources>
