<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pind_background"
    android:orientation="vertical"
    tools:context=".HomeFragment">


    <TextView
        android:id="@+id/tv_vendas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingVertical="5dp"
        android:text="Vendas"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/background_estoque_list"
        android:paddingTop="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vendas"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vendas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clipToPadding="false"
            android:paddingBottom="30dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/cl_buttons"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="8"
            tools:listitem="@layout/layout_vendas_list_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"
            android:id="@+id/cl_buttons">

            <Button
                android:id="@+id/btn_add_vendas"
                style="@style/Button.Basic.Red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/adicionar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_remove_vendas"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_remove_vendas"
                style="@style/Button.Basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remover"
                android:foregroundTint="@color/pind_red"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_add_vendas"
                app:layout_constraintEnd_toStartOf="@id/btn_cancel"
                app:layout_constraintStart_toEndOf="@+id/btn_add_vendas"
                app:layout_constraintTop_toTopOf="@+id/btn_add_vendas" />

            <Button
                android:id="@+id/btn_cancel"
                style="@style/Button.Basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cancelar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/btn_remove_vendas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_remove_vendas"
                app:layout_constraintTop_toTopOf="@+id/btn_remove_vendas" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>